--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -1,6 +1,7 @@
 *   {
     box-sizing: border-box;
-    }
+    /*border-style: solid;*/
+   }
 
 :root {
     --main-bg: #d6c464;
@@ -28,7 +29,7 @@ h2 {
     grid-template-areas:
             "Heading Heading Heading"
             "Reserved-1 Logo Reserved-2"
-            /*"Options Options Options"*/
+            "Options Options Options"
             "Results Results Results";
             /*"Footer Footer Footer";*/
     background-color: var(--main-bg);
@@ -86,19 +87,37 @@ h2 {
 }
 
 .option1 { grid-area: option1; text-align: center;
-    font-size: 1rem;}
+    font-size: 1rem;
+    line-height: 1.5;
+    }
+        #word-form {
+            font-size: 3rem;
+
+        }
+            input#word-form {
+                background-color: var(--main-yellow);
+                text-align: center;
+            }
 
 .option2 { grid-area: option2; text-align: center;
-    font-size: 2rem;}
+    font-size: 1rem;}
+
+        #word-length-form {
+            font-size: 3rem
+        }
+            input#word-length-form {
+                background-color: var(--main-yellow);
+                text-align: center;
+            }
 
 .option3 { grid-area: option3; text-align: center;
-    font-size: 2rem;}
+    font-size: 1rem;}
 
 .option4 { grid-area: option4; text-align: center;
-    font-size: 2rem;}
+    font-size: 1rem;}
 
 .option5 { grid-area: option5; text-align: center;
-    font-size: 2rem;}
+    font-size: 1rem;}
 
 .Results { grid-area: Results; text-align: center;
     font-size: 2rem;}
