--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -132,6 +132,13 @@ h2 {
 
 .option4 { grid-area: option4; text-align: center;
     font-size: 1rem;}
+        #l33t {
+            font-size: 3rem;
+        }
+        select#l33t {
+            background-color: var(--main-yellow);
+            text-align: center;
+        }
 
 .option5 { grid-area: option5; text-align: center;
     font-size: 1rem;}
