--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -13,6 +13,8 @@
 }
 /*COLOR-SCHEME*/
 /*d6c464-ffc711-d6701c-a14e1a-921b16*/
+/* code that is here, until the first @media block, will apply to any screen size */
+
 
 body {
     background-color: var(--main-bg);
@@ -32,6 +34,23 @@ h2 {
             "Results Results Results"
             "Footer Footer Footer";
     background-color: var(--main-bg);
+    max-width:800px;
+}
+
+        @media screen and (max-width: 375px) {
+            /* comes into effect for screens less than or equal to 320 pixels */
+            .grid-container {
+                width: 375px ;
+                padding-right:10px;
+            }
+        }
+
+@media screen and (max-width: 360px) {
+    /* comes into effect for screens less than or equal to 320 pixels */
+    .grid-container {
+        width: 360px ;
+        padding-right:10px;
+    }
 }
 
 .Heading {
