--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -40,14 +40,16 @@ h2 {
         @media screen and (max-width: 375px) {
             /* comes into effect for screens less than or equal to 320 pixels */
             .grid-container {
-                width: 350px ;
+                width: 325px ;
+                margin:auto;
             }
         }
 
 @media screen and (max-width: 360px) {
     /* comes into effect for screens less than or equal to 320 pixels */
     .grid-container {
-        width: 360px ;
+        width: 315px ;
+        margin:auto;
     }
 }
 
@@ -106,9 +108,9 @@ h2 {
     grid-template-rows: 1fr;
     grid-template-areas: "option1 option2 option3 option4 option5";
     grid-area: Options;
-    grid-gap: 1%;
-    margin-left: 10px;
-    margin-right: 10px;
+    /*grid-gap: 1%;*/
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
 }
 
 .option1 { grid-area: option1; text-align: center;
