--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -18,7 +18,11 @@
 
 body {
     background-color: var(--main-bg);
-
+    /*margin-right: 8px;*/
+    max-width: 1024px;  /*iPad Pro res*/
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 0;
 }
 
 h2 {
@@ -35,23 +39,8 @@ h2 {
             "Results Results Results"
             "Footer Footer Footer";
     background-color: var(--main-bg);
-    /*max-width:800px;*/
-}
+    margin: 0 8px;
 
-        @media screen and (max-width: 375px) {
-            /* comes into effect for screens less than or equal to 320 pixels */
-            .body {
-                width: 325px ;
-                margin:auto;
-            }
-        }
-
-@media screen and (max-width: 360px) {
-    /* comes into effect for screens less than or equal to 320 pixels */
-    .body {
-        width: 315px ;
-        margin:auto;
-    }
 }
 
 .Heading {
@@ -66,26 +55,17 @@ h2 {
 }
 
 .heading-centre { grid-area: heading-centre;
-    /*text-align: center;*/
-    /*font-size: 2rem;*/
-    /*max-height: 50px;*/
 }
 
 .headingright { grid-area: headingright;
 }
 
 .Reserved-1 { grid-area: Reserved-1;
-    /*text-align: center;*/
-    /*font-size: 2rem;*/
 }
 
 .Logo { grid-area: Logo;
-    width: 95%;
+    width: 50vw;
     align-content: center;
-    /*display: block;*/
-    /*margin: auto;*/
-    /*max-width: 80%;*/
-    /*padding: 1rem;*/
 }
     .Logo:hover {
         color: #921B16;
@@ -99,8 +79,6 @@ h2 {
         }
 
 .Reserved-2 { grid-area: Reserved-2;
-    /*text-align: center;*/
-    /*font-size: 2rem;*/
 }
 
 .Options {
@@ -109,20 +87,18 @@ h2 {
     grid-template-rows: 1fr;
     grid-template-areas: "option1 option2 option3 option4 option5";
     grid-area: Options;
-    /*grid-gap: 1%;*/
-    /*margin-left: 10px;*/
-    /*margin-right: 10px;*/
 }
 
 .option1 { grid-area: option1; text-align: center;
     font-size: 1rem;
-    }
+}
         #word-form {
             font-size: 1.5rem;
+
         }
             select#word-form {
                 background-color: var(--main-yellow);
-                text-align: center;
+
             }
 
 .option2 { grid-area: option2; text-align: center;
