--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -41,7 +41,6 @@ h2 {
             "Footer Footer Footer";
     background-color: var(--main-bg);
     margin: 0 8px;
-
 }
 
 .Heading {
@@ -52,39 +51,24 @@ h2 {
     grid-area: Heading;
 }
 
-.headingleft { grid-area: headingleft;
-}
+.headingleft { grid-area: headingleft;}
+.heading-centre { grid-area: heading-centre;}
+.headingright { grid-area: headingright;}
 
-.heading-centre { grid-area: heading-centre;
-}
-
-.headingright { grid-area: headingright;
-}
-
-.Reserved-1 { grid-area: Reserved-1;
-}
+.Reserved-1 { grid-area: Reserved-1;}
 
 .Logo { grid-area: Logo;
-    width: 300px;
-    height: 300px;
+    min-width:200px;
     align-content: center;
 }
+
 .Logo:hover {
-    color: #921B16;
-    box-shadow: blue;
     background-color:var(--main-yellow);
-    border-radius: 100%;
+    border-radius: 50%;
 }
 .Logo:active {
     background-color: var(--main-bg-brown) ;
     border-radius: 50%;
-}
-
-.Logo img {
-    width:240px;
-    height:240px;
-    margin: 0 30px;
-    padding-bottom: 40px;
 }
 
 .Reserved-2 { grid-area: Reserved-2;
